use JPMS gradle plugin