@@ -1,3 +1,12 @@
+buildscript {
+  repositories {
+    maven { url  "https://dl.bintray.com/dua3/public" }
+  }  
+  dependencies {
+    classpath group: 'com.dua3.gradle.jpms', name: 'JpmsGradlePlugin', version: '0.1'
+  }
+}
+
 plugins {
   id "com.github.spotbugs" version "1.6.0"
   id "com.jfrog.bintray" version "1.8.0"
@@ -7,10 +16,11 @@ apply plugin: 'maven'
 apply plugin: 'maven-publish'
 apply plugin: 'java-library'
 apply plugin: 'com.github.spotbugs'
+apply plugin: 'com.dua3.gradle.jpms'
 
 /////////////////////////////////////////////////////////////////////////////
     group              = 'com.dua3.meja'
-    version            = '1.0-beta13'
+    version            = '1.0-beta13-jpms'
     
     ext.moduleName     = project.group 
     ext.scm            = 'https://github.com/xzel23/meja.git'
@@ -45,9 +55,9 @@ dependencies {
     compile "org.apache.poi:poi-ooxml-schemas:${poiVersion}"
 
     // dua3 utility
-    compile        group: 'com.dua3.utility', name: 'utility', version: '0.11.2'
-    swingCompile   group: 'com.dua3.utility', name: 'utility', version: '0.11.2'
-    samplesCompile group: 'com.dua3.utility', name: 'utility', version: '0.11.2'
+    compile        group: 'com.dua3.utility', name: 'utility', version: '0.11.2-jpms'
+    swingCompile   group: 'com.dua3.utility', name: 'utility', version: '0.11.2-jpms'
+    samplesCompile group: 'com.dua3.utility', name: 'utility', version: '0.11.2-jpms'
     
     // Log4j2
     compile        group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.10.0'
@@ -63,76 +73,6 @@ dependencies {
 
 sourceCompatibility = 8
 targetCompatibility = 8
-
-// === JIGSAW === >
-
-for (SourceSet sourceSet: sourceSets) {
-    if (!sourceSet.allJava.matching { include '**/module-info.java'}.isEmpty()) {
-        logger.info "{} has a module-info.java", sourceSet
-        
-        // check Java version
-        if (!JavaVersion.current().isJava9Compatible()) {
-            logger.warn('At least Java 9 is needed if a module-info.java file is present. Build will probably fail!')
-        }
-        
-        // if sourceCompatibility is < Java9, exclude module-info.java from the
-        // main sourceSet and compile it seperately with compatibility set to Java9
-        if (!sourceCompatibility.isJava9Compatible()) {
-            // define task names
-            def compileJavaSources = 'compileJavaSources_'+sourceSet.name
-            def compileModuleInfo = 'compileModuleInfo_'+sourceSet.name
-            
-            // define directories
-            def name = sourceSet.name
-            def sources = sourceSet.java.srcDirs
-            def destination = sourceSet.output.classesDirs.singleFile
-            def classes = sourceSet.compileClasspath + sourceSet.output
-            def modulepath = classes.asPath+";"+destination
-
-            task "$compileJavaSources" (type: JavaCompile) {
-                source = sources
-                classpath = classes
-                exclude '**/module-info.java'
-                destinationDir = destination
-            }
-            
-            task "$compileModuleInfo" (type: JavaCompile) {
-                doFirst {
-                    logger.info "Compiling module-info.java for source set '{}' in Java 9 compatibility mode.", name
-                    
-                    logger.debug("module-path:\n{}", modulepath.replaceAll(";", "\n"))
-                    logger.debug("class-path:\n{}", classpath.asPath.replaceAll(";", "\n"))
-    
-                    options.compilerArgs = [
-                        '--module-path', modulepath,
-                        '--add-modules', 'ALL-SYSTEM',
-                        '-d', destination
-                    ]
-                }
-                
-                inputs.property("moduleName", project.moduleName)
-    
-                sourceCompatibility = 9
-                targetCompatibility = 9
-    
-                source = sources
-                include '**/module-info.java'                
-                classpath = classes                 
-                destinationDir = destination
-                
-                dependsOn {
-                    "$compileJavaSources"
-                }
-            }
-            
-            sourceSet.java { 
-                exclude '**/module-info.java'
-            }
-         
-            assemble.dependsOn "$compileModuleInfo"
-        }         
-    }
-}
 
 // === SPOTBUGS === >
 
